# cmake-cross-platform

./: CMakeLists.txt  README.md  build.sh
apps/: app.cpp
cmake/: i686-w64-mingw32.cmake
tests/: CMakeLists.txt
